<resources>
    <string name="app_name">National Observer</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_share">Share</string>
    <string name="action_add_to_favorites">Add to favorites</string>
    <string name="action_remove_from_favorites">Remove from Favorites</string>
    <string name="action_open_in_browser">Open in browser</string>

    <string name="post_image">Post image</string>

    <string name="inet_no_items">There are no posts. Connect to the internet to get last articles.</string>
    <string name="favorites_no_items">There is no items. Add some posts to favorites to find them here</string>
    <string name="load_more_posts">Load more posts</string>
    <string name="open_in_Youtube">open with Youtube</string>
    <string name="open_with">Open with</string>

    <string name="post_source"><![CDATA[ <i>Source: <a href="%1$s">%2$s</a></i> ]]></string>
    <string name="post_gamer">Gamer: %1$s</string>

    <string name="timeout_error">Some error happened\nConnection timeout error</string>
    <string name="unknownhost_error">Some error happened\nCan not connect to host</string>
    <string name="parse_error">Some error happened\nCan not read response</string>
    <string name="unhandled_error">Some error happened\n%1$s</string>

    <string name="added_to_favorite">Post added to favorite</string>
    <string name="undo">Undo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_latest_posts">Latest Posts</string>
    <string name="title_favorites">Favorites</string>

    <string name="sections">Sections</string>

    <string name="sectionCommonSocial">Common social</string>
    <string name="sectionSensarProject">Sensar project</string>
    <string name="sectionEthnonetwork">Ethnonetwork</string>
    <string name="sectionAltPolitics">Alternative politics</string>
    <string name="sectionUnknownUkraine">Unknown Ukraine</string>
    <string name="sectionMeetingClub">Meeting Club</string>
    <string name="sectionWorldAtWeek">World at week</string>
    <string name="sectionCulture">Culture</string>
    <string name="sectionArt">Art</string>
    <string name="sectionScience">Science</string>
    <string name="sectionEducation">Education</string>
    <string name="sectionEconomicsAndBusiness">Economics and business</string>
    <string name="sectionLifeAroundUs">Life around us</string>
</resources>
